tests/baselines/reference/noImplicitAnyForMethodParameters.errors.txt
==== tests/cases/compiler/noImplicitAnyForMethodParameters.ts (4 errors) ====
    declare class A {
        private foo(a); // OK - ambient class and private method - no error
    }
    
    declare class B {
        public foo(a); // OK - ambient class and public method - error
        ~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
                   ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    }
    
    class C {
        private foo(a) { } // OK - non-ambient class and private method - error
                    ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    }
    class D {
        public foo(a) { } // OK - non-ambient class and public method - error
                   ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    }